--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dev": "lithia dev",
     "start": "lithia start",
     "build": "lithia build",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:rollback": "drizzle-kit rollback",
     "format": "prettier --write .",
     "lint": "eslint . --fix"
   },
@@ -18,6 +21,8 @@
   "devDependencies": {
     "@eslint/js": "^9.16.0",
     "@types/node": "^22.10.1",
+    "@types/pg": "^8.11.11",
+    "drizzle-kit": "^0.30.4",
     "eslint": "^9.16.0",
     "globals": "^15.13.0",
     "prettier": "^3.4.2",
@@ -25,6 +30,9 @@
     "typescript-eslint": "^8.17.0"
   },
   "dependencies": {
-    "lithia": "^2.0.3"
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.39.1",
+    "lithia": "^2.0.5",
+    "pg": "^8.13.1"
   }
 }
